# triangler

./: .gitignore  PREVIEW.md  README.md  gui.py  pyproject.toml  requirements.txt  setup.py  triangler-cli.py
.github/ISSUE_TEMPLATE/: bug_report.md  question.md
examples/: convert_simple.py  example.py
tests/: conftest.py  test_setup_validation.py
triangler/: __init__.py  __main__.py  cmd.py  color.py  config.py  converter.py  edges.py  mod.py  poisson_disk_sampling.py  process.py  progress.py  sampling.py  threshold_sampling.py
triangler/edge_detectors/: __init__.py  canny.py  entropy.py  sobel.py
triangler/renderers/: __init__.py  centroid.py  mean.py
triangler/samplers/: __init__.py  poisson.py  threshold.py
